Ensure splitters are visible when dragged
Now the item being dragged gets the .lm_dragging class while being
dragged, as well as the <body>. This lets us write CSS rules for the
item being dragged, in this case to ensure it's highlighted just as if
the mouse was hovering over it at all times.

Fixes #141

--- a/src/css/goldenlayout-base.css
+++ b/src/css/goldenlayout-base.css
@@ -35,7 +35,7 @@
 	z-index: 2;
 }
 
-.lm_splitter:hover{
+.lm_splitter:hover, .lm_splitter.lm_dragging{
 	background: orange;
 }
 
